delete BreadCrumb,organize scss files,clean up comments

--- a/src/templates/styles/postList.module.scss
+++ b/src/templates/styles/postList.module.scss
@@ -9,8 +9,8 @@
 
 h1.h1{ 
   padding:1rem;
-  color: #fff;/*文字色*/
-  background: #0faf97;/*背景色*/
+  color: #fff;
+  background: #0faf97;
   font-weight:500;
   border-bottom:6px #ddd solid;
   border-radius:2px;
