--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -19,9 +19,9 @@ a:hover{
 }
 
 ul{
-  list-style:  none;  /* デフォルトのアイコンを消す */
-  margin:  0;         /* デフォルト指定上書き */
-  padding: 0;         /* デフォルト指定上書き */
+  list-style:  none;  
+  margin:  0;         
+  padding: 0;         
 }
 
 .container{
