--- a/src/templates/styles/blog.module.scss
+++ b/src/templates/styles/blog.module.scss
@@ -14,9 +14,9 @@
 
 h1.h1{ 
     margin-top:10px;
-    padding: 1rem;/*文字周りの余白*/
-    color: #fff;/*文字色*/
-    background: #0faf97;/*背景色*/
+    padding: 1rem;
+    color: #fff;
+    background: #0faf97;
     font-weight:500;
     border: solid 1.5px #6ad1c8;
     border-radius:2px;
@@ -27,11 +27,11 @@ h1.h1{
 
 
   h2{
-    padding: 1rem 1rem;/*上下 左右の余白*/
-    color: #494949;/*文字色*/
-    background:rgba(230,255,230,0.8);/*背景透明に*/
-    background: #f4f4f4;/*背景色*/
-    border-left: solid 5px #6ad1c8;/*左線*/
+    padding: 1rem 1rem;
+    color: #494949;
+    background:rgba(230,255,230,0.8);
+    background: #f4f4f4;
+    border-left: solid 5px #6ad1c8;
     border-bottom: solid 1px #6ad1c8;
     border-bottom: solid 1px #ccc;
     font-weight:600;
