--- a/src/components/styles/blogSingle.module.scss
+++ b/src/components/styles/blogSingle.module.scss
@@ -22,7 +22,7 @@ margin:1.5rem 0;
 .postImage{
 margin:5px 0 auto;
 height:auto;
-object-fit: cover;
+object-fit: contain;
 width:100%;
 flex-basis: 25%;
 }
