--- a/src/templates/styles/blog.module.scss
+++ b/src/templates/styles/blog.module.scss
@@ -23,11 +23,23 @@ h1.h1{
     font-size:2rem;
 }
 
+.catDate{
+  margin:20px 10px 5px 20px;
+}
+
+.catLink{
+  font-size:0.8rem;
+  background-color:#41b8a6;
+  color:#fff;
+  padding:3px 10px;
+  border-radius:5px;
+  margin-right:10px;
+  }
+
 .contents {
 
-
   h2{
-    padding: 1rem 1rem;
+    padding: 0.6rem 1.2rem 1rem;
     color: #494949;
     background:rgba(230,255,230,0.8);
     background: #f4f4f4;
@@ -61,6 +73,7 @@ h1.h1{
   h4 {
     position: relative;
     display: inline-block;
+    margin-top:15px;
     padding: 0 55px;
   }
   
@@ -84,15 +97,34 @@ h1.h1{
   }
   
   p{
-    margin-bottom:30px;
+    padding:0 15px;
+    margin-bottom:15px;
+  }
+
+  ul{
+    margin:10px 10px 30px;
+  }
+   ul>li{
+     margin:0;
+   }
+  ul>li>p{
+    margin-bottom:0;
+  }
+
+  img{
+    margin:20px 10px 20px;
   }
 
   }
 
 /** Related Articles **/
+
+.relatedTitle{
+  margin:30px 0;
+}
   
   .relatedArticles{
-    margin:10px 10px;
+    margin:20px 10px;
     display:block;
     flex-wrap:wrap;
   }
