--- a/src/templates/styles/blog.module.scss
+++ b/src/templates/styles/blog.module.scss
@@ -1,62 +1,60 @@
-.titleBar{
-    background:#0faf97;
-    color:#ffffff;
-    padding-bottom:10px;
-    border-bottom:6px #ddd solid;
+.titleBar {
+  background: #0faf97;
+  color: #ffffff;
+  padding-bottom: 10px;
+  border-bottom: 6px #ddd solid;
 }
 
-.wrapper{
-    max-width:1020px;
-    margin:0 auto;
-    padding:1rem 1rem 2rem;
+.wrapper {
+  max-width: 1020px;
+  margin: 0 auto;
+  padding: 1rem 1rem 2rem;
 }
 
-
-h1.h1{ 
-    margin-top:10px;
-    padding: 1rem;
-    color: #fff;
-    background: #0faf97;
-    font-weight:500;
-    border: solid 1.5px #6ad1c8;
-    border-radius:2px;
-    font-size:2rem;
+h1.h1 {
+  margin-top: 10px;
+  padding: 1rem;
+  color: #fff;
+  background: #0faf97;
+  font-weight: 500;
+  border: solid 1.5px #6ad1c8;
+  border-radius: 2px;
+  font-size: 2rem;
 }
 
-.catDate{
-  margin:20px 10px 5px 20px;
+.catDate {
+  margin: 20px 10px 5px 20px;
 }
 
-.catLink{
-  font-size:0.8rem;
-  background-color:#41b8a6;
-  color:#fff;
-  padding:3px 10px;
-  border-radius:5px;
-  margin-right:10px;
-  }
+.catLink {
+  font-size: 0.8rem;
+  background-color: #41b8a6;
+  color: #fff;
+  padding: 3px 10px;
+  border-radius: 5px;
+  margin-right: 10px;
+}
 
 .contents {
-
-  h2{
+  h2 {
     padding: 0.6rem 1.2rem 1rem;
     color: #494949;
-    background:rgba(230,255,230,0.8);
+    background: rgba(230, 255, 230, 0.8);
     background: #f4f4f4;
     border-left: solid 5px #6ad1c8;
     border-bottom: solid 1px #6ad1c8;
     border-bottom: solid 1px #ccc;
-    font-weight:600;
-    margin-top:40px;
-    margin-bottom:25px;
-    font-size:2.5rem;
+    font-weight: 600;
+    margin-top: 40px;
+    margin-bottom: 25px;
+    font-size: 2.5rem;
   }
 
-  h3{
+  h3 {
     position: relative;
-    margin-top:50px;
-    margin-bottom:30px;
-    font-size:2.25rem;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    font-size: 2.25rem;
   }
 
   h3:after {
@@ -66,19 +64,32 @@ h1.h1{
     bottom: -10px;
     width: 100%;
     height: 7px;
-    background: -webkit-repeating-linear-gradient(-45deg, #6ad1c8, #6ad1c8 2px, #fff 2px, #fff 4px);
-    background: repeating-linear-gradient(-45deg, #6ad1c8, #6ad1c8 2px, #fff 2px, #fff 4px);
+    background: -webkit-repeating-linear-gradient(
+      -45deg,
+      #6ad1c8,
+      #6ad1c8 2px,
+      #fff 2px,
+      #fff 4px
+    );
+    background: repeating-linear-gradient(
+      -45deg,
+      #6ad1c8,
+      #6ad1c8 2px,
+      #fff 2px,
+      #fff 4px
+    );
   }
 
   h4 {
     position: relative;
     display: inline-block;
-    margin-top:15px;
+    margin-top: 15px;
     padding: 0 55px;
   }
-  
-    h4:before, h4:after {
-    content: '';
+
+  h4:before,
+  h4:after {
+    content: "";
     position: absolute;
     top: 50%;
     display: inline-block;
@@ -87,87 +98,82 @@ h1.h1{
     border-top: solid 1px black;
     border-bottom: solid 1px black;
   }
-  
+
   h4:before {
-    left:0;
+    left: 0;
   }
 
   h4:after {
     right: 0;
   }
-  
-  p{
-    padding:0 15px;
-    margin-bottom:15px;
+
+  p {
+    padding: 0 15px;
+    margin-bottom: 15px;
   }
 
-  ul{
-    margin:10px 10px 30px;
+  ul {
+    margin: 10px 10px 30px;
   }
-   ul>li{
-     margin:0;
-   }
-  ul>li>p{
-    margin-bottom:0;
+  ul > li {
+    margin: 0;
   }
-
-  img{
-    margin:20px 10px 20px;
+  ul > li > p {
+    margin-bottom: 0;
   }
 
+  img {
+    margin: 20px 10px 20px;
   }
+}
 
 /** Related Articles **/
 
-.relatedTitle{
-  margin:30px 0;
+.relatedTitle {
+  margin: 30px 0;
 }
-  
-  .relatedArticles{
-    margin:20px 10px;
-    display:block;
-    flex-wrap:wrap;
-  }
 
-  .relatedItems{
-    margin:10px 10px;
-    display:flex;
-    border: 1px solid #e5e5e5;
-    border-radius: 3px;
-    transition: all 0.3s;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
-  }
+.relatedArticles {
+  margin: 20px 10px;
+  display: block;
+  flex-wrap: wrap;
+}
 
-  .relatedItems:hover{
-    transform: scale(1.02, 1.02);
-  }
+.relatedItems {
+  margin: 10px 10px;
+  display: flex;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
+  transition: all 0.3s;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+}
 
-  @media screen and (max-width:568px){
-    .relatedItems{
-      display:block;
-  }
-  }
+.relatedItems:hover {
+  transform: scale(1.02, 1.02);
+}
 
-  .relatedImage{
-    margin:5px 10px;
-    object-fit: cover;
-    height:150px;
-    flex:0 0 200px;
+@media screen and (max-width: 568px) {
+  .relatedItems {
+    display: block;
   }
+}
 
-  .relatedTexts{
-    flex:1 1 500px;
-    padding:10px;
-  }
+.relatedImage {
+  margin: 5px 10px;
+  object-fit: cover;
+  height: 150px;
+  flex: 0 0 200px;
+}
 
-  .relatedLink{
-    font-size:1.5rem;
-  }
+.relatedTexts {
+  flex: 1 1 500px;
+  padding: 10px;
+}
 
-  .relatedTitle{
-    margin:0 0 20px;
-  }
-  
+.relatedLink {
+  font-size: 1.5rem;
+}
 
-  
-  
+.relatedTitle {
+  margin: 0 0 20px;
+}
