--- a/src/pages/tuts.module.scss
+++ b/src/pages/tuts.module.scss
@@ -7,3 +7,14 @@
   padding: 1rem 1rem 2rem;
   width: 100%;
 }
+
+.chartWrapper {
+  padding:5px;
+  max-width: 1020px;
+  margin:20px auto;
+}
+
+.chartContainer {
+  margin:40px 0;
+}
+
