--- a/src/templates/styles/postList.module.scss
+++ b/src/templates/styles/postList.module.scss
@@ -23,12 +23,12 @@ h1.h1 {
   display: block;
   max-width: 1020px;
   margin: 0 auto;
-  padding: 1rem 1rem 2rem;
+  padding: 10px 5px;
   width: 100%;
 }
 
 .main-contents {
-  margin: 20px 15px 20px 15px;
+  margin: 0 15px 20px 15px;
 }
 
 .sideWidget {
@@ -80,15 +80,16 @@ h1.h1 {
 //Post Lists
 
 .postTitle {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 600;
   text-decoration: none;
 }
 
 .postsList {
   display: flex;
+  justify-content: space-between;
   border-bottom: solid 1px #444;
-  margin: 1.5rem 0;
+  margin: 15px 0;
 }
 
 @media screen and (max-width: 568px) {
@@ -98,7 +99,8 @@ h1.h1 {
 }
 
 .postImage {
-  margin: 5px 0 auto;
+  margin: 5px 10px;
+  padding:15px;
   height: auto;
   object-fit: cover;
   width: 100%;
@@ -107,7 +109,8 @@ h1.h1 {
 
 .postText {
   flex-basis: 75%;
-  padding: 0 15px 5px;
+  padding: 0 15px 5px 25px;
+  margin:0 10px;
 }
 
 .catLink {
