--- a/src/components/styles/header.module.scss
+++ b/src/components/styles/header.module.scss
@@ -57,7 +57,15 @@
   
   @media screen and (max-width:460px){
     .logo{
-      width:140px;
+      width:120px;
       height:auto;
+      padding:10px auto;
+      margin-top:8px;
+    }
+
+    .nav-item {
+        font-size:0.8rem;
+        margin-right:0.8rem;
+        padding:10px 15px;
     }
   }
