renew top page layout and other css stylings

--- a/src/components/styles/blogSingle.module.scss
+++ b/src/components/styles/blogSingle.module.scss
@@ -2,7 +2,7 @@
 
 .postsList{
     display:flex;
-    border-bottom:solid 1px #444;
+    border-bottom:solid 1px #ececec;
     margin:15px 0;
 }
     
