--- a/src/components/styles/blogPagination.module.scss
+++ b/src/components/styles/blogPagination.module.scss
@@ -1,13 +1,25 @@
-.paginationWrapper{
-    display:flex;
-    justify-content: space-around;
-    margin:30px 0;
+.paginationWrapper {
+  display: flex;
+  justify-content: space-around;
+  margin: 30px 0;
 }
 
-.paginationBtn{
-    margin:20px 10px 0;
-    text-align: right;
-    border:1px solid #333;
-    padding:5px 10px;
-    border-radius: 5px;
-  }
+.pagination-number {
+  font-weight: 800;
+}
+
+.pagination-btn {
+  color: #fff;
+  background: #0faf97;
+  font-size: 1rem;
+  margin-right: 1.3rem;
+  text-decoration: none;
+  padding: 6px 16px;
+  border-radius: 5px;
+}
+
+.pagination-btn:hover {
+  background: #0faf97;
+  color: #fff;
+  opacity: 0.7;
+}
