--- a/src/templates/styles/blog.module.scss
+++ b/src/templates/styles/blog.module.scss
@@ -136,12 +136,21 @@ h1.h1 {
 
 /** Related Articles **/
 
-.relatedTitle {
+.relatedWrapper {
   margin: 30px 0;
 }
 
+.relatedTitle {
+  color: #777;
+  padding: 0 16px;
+  border-left: #0faf97 8px solid;
+  line-height: 1.2;
+  font-size: 24px;
+  margin-bottom: 8px;
+}
+
 .relatedArticles {
-  margin: 20px 10px;
+  margin: 16px 10px;
   display: block;
   flex-wrap: wrap;
 }
