--- a/src/components/styles/sidebar1.module.scss
+++ b/src/components/styles/sidebar1.module.scss
@@ -7,6 +7,8 @@
 
 .sideUl{
     margin:10px 10px 5px ;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 
@@ -14,6 +16,7 @@
     color:#41b8a6;
     font-size:1.2rem;
     line-height:1.5rem;
+    margin: 0 16px;
 }
 
 .sideList:hover{
